@@ -18,8 +18,8 @@
       </ul>
     </div>
     <div>
+      <h1>Information</h1>
       <table>
-        <caption>Information</caption>
         <tbody>
           <tr><th>Message</th><td id="message"></td></tr>
           <tr><th>Title</th><td id="title"></td></tr>
@@ -29,8 +29,8 @@
       </table>
     </div>
     <div id="context-area">
+      <h1>Context information</h1>
       <table>
-        <caption>Context information</caption>
         <tbody>
           <tr><th>Method</th><td id="context-method"></td></tr>
           <tr><th>Expression</th><td id="context-expression"></td></tr>
@@ -39,15 +39,15 @@
           <tr><th>Resolver</th><td id="context-resolver"></td></tr>
         </tbody>
       </table>
+      <h1>Context detail</h1>
       <table id="context-detail">
-        <caption>Context detail</caption>
         <tbody>
         </tbody>
       </table>
     </div>
     <div>
+      <h1>Main information</h1>
       <table>
-        <caption>Main information</caption>
         <tbody>
           <tr><th>Method</th><td id="main-method"></td></tr>
           <tr><th>Expression</th><td id="main-expression"></td></tr>
@@ -57,8 +57,8 @@
           <tr><th>Count</th><td id="main-count"></td><tr>
         </tbody>
       </table>
+      <h1>Main details</h1>
       <table id="main-details">
-        <caption>Main details</caption>
         <tbody>
         </tbody>
       </table>
